--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>Hi, this is my page about an ideal robot.</h1>
-<p>This is a paragraph.</p>
+<h1>Ideal Robot</h1>
+<p>This page will be about an ideal robot.</p>
 
 </body>
 </html>
