--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>Ideal Robot</h1>
+<h1 class="font-color" id="ir-title">Ideal Robot</h1>
 <p>This page will be about an ideal robot.</p>
 
 </body>
