--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1 class="font-color" id="ir-title">Ideal Robot</h1>
-<p>This page will be about an ideal robot.</p>
+<p>This page will be about an ideal robot named Corky.</p>
 
 </body>
 </html>
