--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
 
 <h1 class="font-color" id="ir-title">Ideal Robot</h1>
-<p>This page will be about an ideal robot named Corky because he is dorky.</p>
+<p>Thank you for visiting my page, Ideal Robot.</p>
+<p>My name is John Szpyrka, and I live in Colorado Springs, CO where I am a real-estate agent.  I am a native to Colorado Springs, and have lived here all my life with an exception of about 8 years I served in the Army.  I live here with my wife and kid... life is good.</p>
 
+<img src="rustlogo.png" alt="Rust Logo" width="10%">
 </body>
 </html>
