--- a/index.html
+++ b/index.html
@@ -3,13 +3,52 @@
 <head>
 <link rel="stylesheet" href="./styles.css"/>
 <title>Ideal Robot</title>
+<style>
+
+
+    p {
+      margin: 0;
+    }
+
+    #first {
+	  align: center;
+	  height: 200px;
+      width: 900px;
+      background-color: #CE422B;
+      padding: 20px;
+      border: 10px solid #1e2020;
+	  margin-left: 25%;
+    }
+	
+	#second {
+	  margin-left: 25%;
+	  padding: 10px;
+    }
+	
+	#third {
+	  height: 200px;
+      width: 200px;
+	  margin-left: 65%;
+    }
+	</style>
 </head>
 <body>
 
+<div id="first">
 <h1 class="font-color" id="ir-title">Ideal Robot</h1>
 <p>Thank you for visiting my page, Ideal Robot.</p>
 <p>My name is John Szpyrka, and I live in Colorado Springs, CO where I am a real-estate agent.  I am a native to Colorado Springs, and have lived here all my life with an exception of about 8 years I served in the Army.  I live here with my wife and kid... life is good.</p>
+</div>
 
-<img src="rustlogo.png" alt="Rust Logo" width="10%">
+<div id ="second">
+<img src="ideal robot.png" alt="Ideal Robot" width="50%">
+</div>
+
+
+<div id ="third">
+<img src="rustlogo.png" alt="Rust Logo" width="50%">
+</div>
+
+
 </body>
 </html>
